ROS2/skinny/log/build_2021-03-11_15-57-20/excavation/stdout_stderr.log
running egg_info
writing ../../build/excavation/excavation.egg-info/PKG-INFO
writing dependency_links to ../../build/excavation/excavation.egg-info/dependency_links.txt
writing entry points to ../../build/excavation/excavation.egg-info/entry_points.txt
writing requirements to ../../build/excavation/excavation.egg-info/requires.txt
writing top-level names to ../../build/excavation/excavation.egg-info/top_level.txt
reading manifest file '../../build/excavation/excavation.egg-info/SOURCES.txt'
writing manifest file '../../build/excavation/excavation.egg-info/SOURCES.txt'
running build
running build_py
copying excavation/excavation_node.py -> /home/team/SoftwareDevelopment/ROS2/skinny/build/excavation/build/lib/excavation
running install
running install_lib
copying /home/team/SoftwareDevelopment/ROS2/skinny/build/excavation/build/lib/excavation/excavation_node.py -> /home/team/SoftwareDevelopment/ROS2/skinny/install/excavation/lib/python3.6/site-packages/excavation
byte-compiling /home/team/SoftwareDevelopment/ROS2/skinny/install/excavation/lib/python3.6/site-packages/excavation/excavation_node.py to excavation_node.cpython-36.pyc
  File "/home/team/SoftwareDevelopment/ROS2/skinny/install/excavation/lib/python3.6/site-packages/excavation/excavation_node.py", line 8
    imoprt fibre.remote_object
               ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/team/SoftwareDevelopment/ROS2/skinny/install/excavation/lib/python3.6/site-packages/excavation-0.0.0-py3.6.egg-info' (and everything under it)
Copying ../../build/excavation/excavation.egg-info to /home/team/SoftwareDevelopment/ROS2/skinny/install/excavation/lib/python3.6/site-packages/excavation-0.0.0-py3.6.egg-info
running install_scripts
Installing excavation_node script to /home/team/SoftwareDevelopment/ROS2/skinny/install/excavation/lib/excavation
writing list of installed files to '/home/team/SoftwareDevelopment/ROS2/skinny/build/excavation/install.log'
